--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,13 +5,13 @@
     <p class="welcome-text">My name is Davis and I'm a SWE with a SRE focus. This is my blog where I share my thoughts, projects, and tutorials. Feel free to explore the categories and dive into the posts below. Enjoy your stay!</p>
     <div class="welcome-links">
       <a href="https://www.dw-portfolio.com/" target="_blank" rel="noopener noreferrer" title="Visit My Website">
-        <%= inline_svg_tag "website-icon.svg", class: "welcome-icon" %>
+        <%= inline_svg_tag "website-icon.svg", class: "welcome-icon-website" %>
       </a>
       <a href="https://github.com/Dav1s-Ops" target="_blank" rel="noopener noreferrer" title="Visit My GitHub">
-        <%= inline_svg_tag "github-icon.svg", class: "welcome-icon" %>
+        <%= inline_svg_tag "github-icon.svg", class: "welcome-icon-github" %>
       </a>
       <a href="https://www.linkedin.com/in/davis-weimer" target="_blank" rel="noopener noreferrer" title="Visit My LinkedIn">
-        <%= inline_svg_tag "linkedin-icon.svg", class: "welcome-icon" %>
+        <%= inline_svg_tag "linkedin-icon.svg", class: "welcome-icon-linkedin" %>
       </a>
     </div>
   </div>
