--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -4,8 +4,7 @@
   width: 100%;
   max-width: 775px;
   border-bottom: 1px solid var(--Gray, #ccc);
-  color: var(--White);
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  color: whitesmoke;
   margin: 1rem 0 3.5rem 0;
   padding: 10px 10px 0 10px;
   box-sizing: border-box;
@@ -108,9 +107,7 @@
   flex-direction: column;
   align-items: flex-start;
   border-radius: 12px;
-  background: 
-    url('300-75-4-monochrome.png'),
-    radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+  background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
   background-blend-mode: color-dodge;
   border: 1px solid var(--Gray, #363636);
   overflow: hidden;
@@ -133,9 +130,7 @@
   font-family: Unbounded;
   font-weight: 600;
   letter-spacing: 0.3px;
-  background: 
-    url('300-75-4-monochrome.png'),
-    radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+  background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
   background-blend-mode: color-dodge;
   margin: 0;
   text-align: center;
@@ -246,9 +241,7 @@
   align-self: stretch;
   min-height: 200px;
   padding: 20px;
-  background: 
-    url('300-75-4-monochrome.png'),
-    radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+  background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
   background-blend-mode: hard-light;
   border-radius: 12px;
   border: 1px solid #363636;
@@ -407,6 +400,52 @@
   font-weight: 400;
 }
 
+.nothing-here-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.nothing-here-icon {
+  width: 140px;
+  height: 140px;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  text-align: center;
+}
+
+.nothing-here-title {
+  font-family: "Unbounded", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: white;
+  word-wrap: break-word;
+  text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.6);
+}
+
+.nothing-here-description {
+  color: whitesmoke;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.9rem;
+  font-weight: 300;
+  line-height: 1.8;
+  max-width: 300px;
+  word-wrap: break-word;
+  opacity: 0.8;
+}
+
+
 @media (max-width: 600px) {
   .welcome-section {
     flex-direction: column-reverse;
@@ -423,5 +462,18 @@
   .welcome-img {
     width: 120px;
     height: 120px;
+  }
+
+  .nothing-here-container {
+    flex-direction: column;
+  }
+
+  .nothing-here-title {
+    font-size: 1.5rem;
+  }
+
+  .nothing-here-icon {
+    width: 100px;
+    height: 100px;
   }
 }
