--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
   </head>
   <body>
     <%= render "layouts/navbar" %>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
     <%= render "layouts/footer" %>
   </body>
 </html>
