--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -8,7 +8,7 @@
 .login-form-container {
   width: 100%;
   min-height: 420px;
-  max-width: 400px;
+  max-width: 340px;
   margin: 0 auto;
   padding: 32px 20px;
   background: radial-gradient(62.86% 62.86% at 50% 0%, #000 0%, #121212 100%);
@@ -63,7 +63,7 @@
   border-radius: 6px;
   border: 1px solid var(--Gray);
   color: white;
-  font-size: 10px;
+  font-size: 12px;
   font-family: 'B612 Mono', monospace;
   line-height: 16px;
   outline: none;
@@ -286,4 +286,12 @@
 
 .password-reset-links a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+  .login-form-container {
+    background: none;
+    box-shadow: none;
+    border: none;  
+  }
 }
