Add pleasant (and totally not obnoxious) hover effect

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -28,11 +28,15 @@
 .stats-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 14px;
+  gap: 1rem;
 }
 
-.stat-card {
+.stat-card-posts,
+.stat-card-categories,
+.stat-card-drafts,
+.stat-card-tags {
   background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--Gray);
   border-radius: 12px;
   padding: 24px;
@@ -42,6 +46,28 @@
   justify-items: center;
   align-items: center;
   min-height: 80px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border 0.4s ease;
+}
+
+.stat-card-posts:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 60px var(--Electro-Forest-Green);
+  border: 1px solid var(--Electro-Forest-Green); 
+}
+.stat-card-drafts:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 60px var(--Electro-Red);
+  border: 1px solid var(--Electro-Red); 
+}
+.stat-card-categories:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 60px var(--Electro-Blue);
+  border: 1px solid var(--Electro-Blue); 
+}
+.stat-card-tags:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 60px var(--Electro-Yellow);
+  border: 1px solid var(--Electro-Yellow); 
 }
 
 .stat-title {
@@ -73,7 +99,7 @@
 .charts-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 48px;
+  gap: 1rem;
 }
 
 .charts-title {
@@ -90,9 +116,9 @@
 .chart-card {
   border-radius: 8px;
   background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--Gray);
   width: 100%;
-  /* min-height: 300px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -100,6 +126,12 @@
   padding: 1rem;
   gap: 20px;
   box-sizing: border-box;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.chart-card:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 60px var(--Electro-Forest-Green);
 }
 
 .chart-placeholder-text {
