--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
   </head>
   <body>
     <%= render "layouts/navbar" %>
+    <%= render "layouts/flash" %>
     <main>
       <%= yield %>
     </main>
