--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -9,8 +9,7 @@
       </div>
       <div class="about-dialog__bio">
         <p>
-          I'm not just into Software, I'm also an Audio Engineer! I love listening to, <a href="https://www.discogs.com/user/BerrikDub" target='_blank' rel='noopener noreferrer' class="about-dialog__link">collecting</a>, and making music.
-          Check out my <a href='https://soundcloud.com/berrik' target='_blank' rel='noopener noreferrer' class="about-dialog__link">SoundCloud</a> to see what I've been working on. I also enjoy reading (especially Sci-Fi & Fantasy), playing video games,
+          I'm not just into Software, I'm also an Audio Engineer! I love listening to, <a href="https://www.discogs.com/user/BerrikDub" target='_blank' rel='noopener noreferrer' class="about-dialog__link">collecting</a>, and <a href='https://soundcloud.com/berrik' target='_blank' rel='noopener noreferrer' class="about-dialog__link">making</a> music. I also enjoy reading (Sci-Fi & Fantasy), video games,
           <a href='https://www.mixcloud.com/da-5k/' target='_blank' rel='noopener noreferrer' class="about-dialog__link">DJing</a>, and spending time with my partner Mary and our dog.
         </p>
       </div>
