--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -137,7 +137,8 @@
 
 .about-dialog__bio > p {
   margin: 0;
-  text-overflow: ellipsis;
+  text-wrap: pretty;
+  text-align: center;
   font-family: 'Open Sans', sans-serif;
   font-size: 0.8rem;
   font-weight: 300;
@@ -146,7 +147,7 @@
 
 .about-dialog__link {
   color: white;
-  text-decoration: none;
+  text-decoration: underline;
   transition: color 0.4s ease, text-decoration 0.5s ease-out;
 }
 
