--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag "it-me.png", alt: "It's Davis!", class: "welcome-img" %>
   <div class="welcome-content-container">
     <h1 class="welcome-title">Welcome!</h1>
-    <p class="welcome-text">My name is Davis and I'm a SWE with a SRE focus. This is my blog where I share my thoughts, projects, and tutorials. Feel free to explore the categories and dive into the posts below. Enjoy your stay!</p>
+    <p class="welcome-text">I'm Davis, a SWE exploring the universe of software. Welcome to my blog, where I share insights, projects, and tutorials. Dive in and enjoy your stay!</p> 
     <div class="welcome-links">
       <a href="https://www.dw-portfolio.com/" target="_blank" rel="noopener noreferrer" title="Visit My Website">
         <%= inline_svg_tag "website-icon.svg", class: "welcome-icon-website" %>
