--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -49,7 +49,7 @@
       <div class="text-container">
         <div class="nothing-here-title">Nothing here yet..</div>
         <div class="nothing-here-description">
-          I'm sure I'll to this topic soon, try another category and check back later!
+          I'll get to this topic soon, try another category and check back later!
         </div>
       </div>
     </div>
