--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,6 +1,5 @@
 <% if @post.errors.any? %>
-  <div id="error_explanation" class="error-messages">
-    <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+  <div id="error_explanation" class="error-messages" data-controller="flash">
     <ul>
       <% @post.errors.full_messages.each do |message| %>
         <li><%= message %></li>
