--- a/app/assets/stylesheets/post-show.css
+++ b/app/assets/stylesheets/post-show.css
@@ -113,7 +113,7 @@
 .category-tag[data-category="devops"] {
   background: var(--Electro-Red);
 }
-.category-tag[data-category="news"] {
+.category-tag[data-category="music"] {
   background: var(--Electro-Purple);
 }
 .category-tag[data-category="fullstack"] {
