--- a/app/assets/stylesheets/add-new-post.css
+++ b/app/assets/stylesheets/add-new-post.css
@@ -2,6 +2,7 @@
 .add-post-form__container {
   display: flex;
   width: 100%;
+  max-width: 1200px;
   height: 100%;
   box-shadow: 0px 10px 100px -40px var(--Green-Glow);
   border-radius: 8px;
@@ -42,6 +43,7 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 12px;
+  min-width: 280px;
 }
 
 /* Heading */
@@ -152,12 +154,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
-  font-size: 12px;
-  font-family: 'Lato', sans-serif;
+  color: whitesmoke;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.9rem;
+  font-weight: 500;
+  line-height: 1.8;
   text-decoration: none;
-  border: none;
+  border: 1px solid var(--Electro-Forest-Green);
   cursor: pointer;
+  transition: border 0.3s ease-out;
+}
+
+.add-post-form__button:hover {
+  border: 1px solid var(--Electro-Forest-Green, #0DAE5E); 
+  background: rgba(13, 174, 94, 0.8);
+  outline: 1px solid rgba(13, 174, 94, 0.5); 
 }
 
 .add-post-form__button-preview {
