--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -109,6 +109,7 @@
   border-radius: 12px;
   background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
   background-blend-mode: color-dodge;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--Gray, #363636);
   overflow: hidden;
   margin: 0;
@@ -117,7 +118,6 @@
 
 .categories-bar-container:hover {
   transform: scale(1.02);
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--Electro-Forest-Green, #0DAE5E); 
 }
 
@@ -132,6 +132,7 @@
   letter-spacing: 0.3px;
   background: radial-gradient(50% 50% at 50% 50%, #000 0%, #121212 100%);
   background-blend-mode: color-dodge;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   margin: 0;
   text-align: center;
   padding: 10px 0 10px 0;
@@ -216,7 +217,7 @@
   --category-color: var(--Electro-Red-RGB);
 }
 
-.category.news {
+.category.music {
   --category-color: var(--Electro-Purple-RGB);
 }
 
