--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -165,6 +165,50 @@ main {
   transform: translateY(-20px);
 }
 
+.tooltip {
+  max-width: 200px;
+  word-wrap: break-word;
+  word-break: break-word;
+  text-align: center;
+  position: absolute;
+  background-color: var(--Gray);
+  position: absolute;
+  background: var(--Gray);
+  color: whitesmoke;
+  font-size: 0.75rem;
+  padding: 5px 10px;
+  border-radius: 4px;
+  z-index: 1000;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.tooltip.hidden {
+  opacity: 0;
+}
+
+.tooltip:not(.hidden) {
+  opacity: 1;
+}
+
+.tooltip-carrot {
+  position: absolute;
+  bottom: -8px; 
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 8px solid var(--Gray);
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
