--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -117,7 +117,7 @@
 }
 
 .categories-bar-container:hover {
-  transform: scale(1.02);
+  transform: scale(1.03);
   border: 1px solid var(--Electro-Forest-Green, #0DAE5E); 
 }
 
@@ -126,6 +126,9 @@
 }
 
 .category-title-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 1rem;
   font-family: Unbounded;
   font-weight: 600;
@@ -201,6 +204,14 @@
   line-height: normal;
 }
 
+.tooltip-icon {
+  width: 16px;
+  height: 16px;
+  margin-left: 8px;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
 .category.frontend {
   --category-color: var(--Electro-Blue-RGB);
 }
@@ -257,7 +268,7 @@
 }
 
 .post:hover {
-  transform: scale(1.02);
+  transform: scale(1.03);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
   border: 1px solid var(--Electro-Forest-Green, #0DAE5E); 
 }
@@ -297,7 +308,7 @@
 .post .title-text {
   text-align: center;
   border: none;
-  color: white;
+  color: whitesmoke;
   font-size: 24px;
   font-family: Unbounded, sans-serif;
   font-weight: 500;
@@ -430,7 +441,7 @@
   font-family: "Unbounded", sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
-  color: white;
+  color: whitesmoke;
   word-wrap: break-word;
   text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.6);
 }
