--- a/app/assets/stylesheets/post-show.css
+++ b/app/assets/stylesheets/post-show.css
@@ -63,6 +63,11 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+  margin: 0;
+}
+
+.post-sorters-icon.comments-icon {
+  transform: translateY(3px);
 }
 
 .post-taglist {
@@ -98,6 +103,27 @@
   transform: translateY(-2px);
   text-decoration: underline;
   color: whitesmoke;
+}
+
+.post-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.post-info-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 0 12px 0 0;
+  text-align: center;
+  font-family: Lato, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
 }
 
 .categories {
