--- a/app/assets/stylesheets/post-show.css
+++ b/app/assets/stylesheets/post-show.css
@@ -277,6 +277,12 @@
   margin: 20px 0;
 }
 
+.post-content img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 6px;
+}
+
 /* Table Styling */
 .table-container {
   width: 100%;
