--- a/app/views/layouts/_post-show.html.erb
+++ b/app/views/layouts/_post-show.html.erb
@@ -33,6 +33,6 @@
     </div>
   </div>
   <div class="post-content">
-    <%= markdown(@post.content) %>
+    <%= render_post_content(@post) %>
   </div>
 </section>
