--- a/app/assets/stylesheets/post-code-blocks.css
+++ b/app/assets/stylesheets/post-code-blocks.css
@@ -23,7 +23,6 @@
   display: flex;
   justify-content: flex-end;
   background: #333;
-  padding: 5px;
 }
 
 .post-content .highlight {
@@ -74,7 +73,7 @@
   font-size: 0.7rem;
   border-radius: 3px;
   cursor: pointer;
-  /* margin-right: 5px; */
+  margin: 6px;
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
