--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -172,8 +172,6 @@ main {
   text-align: center;
   position: absolute;
   background-color: var(--Gray);
-  position: absolute;
-  background: var(--Gray);
   color: whitesmoke;
   font-size: 0.75rem;
   padding: 5px 10px;
@@ -185,16 +183,15 @@ main {
   line-height: 1.8;
   pointer-events: none;
   opacity: 0;
-  transition: opacity 0.4s ease;
+  visibility: hidden;
+  transition: opacity 0.4s ease, visibility 0.4s ease;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.tooltip.hidden {
-  opacity: 0;
-}
-
-.tooltip:not(.hidden) {
+.tooltip.visible {
   opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .tooltip-carrot {
@@ -236,17 +233,27 @@ main {
 
 .scroll-to-top {
   position: fixed;
-  bottom: 2rem;
+  bottom: 3rem;
   right: 2rem;
-  background: var(--Electro-Forest-Green);
+  background: rgba(54, 54, 54, 0.7);
   color: var(--White);
-  padding: 0.75rem 1rem;
-  border-radius: 50%;
+  padding: 0.5rem;
+  border: 1px solid var(--Electro-Forest-Green, #0DAE5E);
+  border-radius: 2rem;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.25rem;
   cursor: pointer;
   z-index: 100;
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  transition: box-shadow 0.4s ease, background 0.3s ease, outline 0.3s ease;
+}
+
+.scroll-to-top__icon {
+  color: whitesmoke;
+  width: 28px;
+  height: 28px;
 }
 
 .scroll-to-top.hidden {
@@ -261,5 +268,6 @@ main {
 }
 
 .scroll-to-top:hover {
-  background: var(--Electro-Blue);
+  background: var(--Electro-Forest-Green);
+  box-shadow: 0px 0px 60px #0DAE5E;
 }
