--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,6 @@
       <%= yield %>
     </main>
     <%= render "layouts/footer" %>
-    <div data-controller="scroll-to-top" class="scroll-to-top hidden" data-action="click->scroll-to-top#scrollToTop">
-      ↑ Top
-    </div>
+    <%= render "layouts/scroll-to-top" %>
   </body>
 </html>
