Add a neat lil tooltip

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <section class="welcome-section">
-  <%= image_tag "it-me.png", alt: "It's Davis!", class: "welcome-img" %>
+  <%= image_tag "it-me.png", alt: "It's Davis!", class: "welcome-img", data: { controller: "tooltip", action: "mouseover->tooltip#show mouseout->tooltip#hide", tooltip_text: "Howdy!" }  %>
   <div class="welcome-content-container">
     <h1 class="welcome-title">Welcome!</h1>
-    <p class="welcome-text">I'm Davis, a SWE exploring the universe of software. Welcome to my blog, where I share insights, projects, and tutorials. Dive in and enjoy your stay!</p> 
+    <p class="welcome-text">I'm Davis, a SWE exploring the universe of software. Welcome to my blog, where I share insights, projects, and tutorials. Scroll down and enjoy your stay!</p>
     <div class="welcome-links">
       <a href="https://www.dw-portfolio.com/" target="_blank" rel="noopener noreferrer" title="Visit My Website">
         <%= inline_svg_tag "website-icon.svg", class: "welcome-icon-website" %>
