--- a/app/assets/stylesheets/post-show.css
+++ b/app/assets/stylesheets/post-show.css
@@ -77,12 +77,6 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  color: var(--Light-Gray, #CECDCC);
-  font-family: Lato, sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
   cursor: auto;
   box-sizing: border-box;
 }
@@ -90,10 +84,13 @@
 .post-tag {
   padding: 4px 12px;
   color: var(--Light-Gray);
+  font-family: Lato, sans-serif;
   font-size: 14px;
   font-weight: 400;
+  line-height: normal;
   display: inline-block;
   transition: background-color 0.3s ease, transform 0.2s ease;
+  text-decoration: none;
   cursor: pointer;
 }
 
