Change to flex-start

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -83,8 +83,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 32px;
+  height: 100%;
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
