--- a/app/views/contact_mailer/feedback.text.erb
+++ b/app/views/contact_mailer/feedback.text.erb
@@ -1,3 +1,6 @@
-Contact#feedback
+New Feedback
 
-<%= @greeting %>, find me in app/views/contact_mailer/feedback.text.erb
+From: <%= @sender_email %>
+
+Message:
+<%= @message %>
