--- a/app/views/contact_mailer/feedback.html.erb
+++ b/app/views/contact_mailer/feedback.html.erb
@@ -1,5 +1,4 @@
-<h1>Contact#feedback</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/contact_mailer/feedback.html.erb
-</p>
+<h1>New Feedback</h1>
+<p><strong>From:</strong> <%= @sender_email %></p>
+<p><strong>Message:</strong></p>
+<p><%= @message %></p>
