--- a/app/views/contact_mailer/feedback_copy.html.erb
+++ b/app/views/contact_mailer/feedback_copy.html.erb
@@ -1,4 +1,1 @@
-<h1>New Feedback</h1>
-<p><strong>From:</strong> <%= @sender_email %></p>
-<p><strong>Message:</strong></p>
-<p><%= @message %></p>
+<%= render 'feedback' %>
