--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -1,28 +1,29 @@
 <dialog id="contact-dialog" class="footer-contact-dialog">
-    <%= button_tag "&times;".html_safe, type: "button", class: "footer-dialog__close-button", data: { action: "footer-dialog#close" }, aria_label: "Close dialog" %>
-    <form class="contact-form">
-      <div class="contact-form__heading">
-        <h2>Contact</h2>
-      </div>
-      <div class="contact-form__subheading">
-        <p>Feel free to drop a line below with any feedback, suggestions or questions!</p>
-      </div>
-      <div class="contact-form__field">
-        <label for="email" class="contact-form__label">Email</label>
-        <input type="email" id="email" name="email" class="contact-form__input" placeholder="Your email">
-      </div>
-      <div class="contact-form__field">
-        <label for="message" class="contact-form__label">Message</label>
-        <textarea id="message" name="message" class="contact-form__textarea" placeholder="Your message"></textarea>
-      </div>
-      <div class="contact-form__checkbox-field">
-        <input type="checkbox" id="send_copy" name="send_copy" class="contact-form__checkbox">
-        <label for="send_copy" class="contact-form__checkbox-label">Send me a copy</label>
-      </div>
-      <div class="contact-form__buttons">
-        <button type="submit" class="contact-form__button" disabled>
-          <span class="contact-form__button-text">🚧 Under construction! 🚧</span>
-        </button>
-      </div>
-    </form>
-  </dialog>
+  <%= button_tag "&times;".html_safe, type: "button", class: "footer-dialog__close-button", data: { action: "footer-dialog#close" }, aria_label: "Close dialog" %>
+  <%= form_with url: contacts_path, method: :post, class: "contact-form", data: { controller: "contact-form", action: "submit->contact-form#submitForm" } do %>
+    <div class="contact-form__heading">
+      <h2>Contact</h2>
+    </div>
+    <div class="contact-form__subheading">
+      <p>Feel free to drop a line below with any feedback, suggestions or questions!</p>
+    </div>
+    <div class="contact-form__field">
+      <label for="email" class="contact-form__label">Email</label>
+      <input type="email" id="email" name="email" class="contact-form__input" placeholder="Your email" required>
+    </div>
+    <div class="contact-form__field">
+      <label for="message" class="contact-form__label">Message</label>
+      <textarea id="message" name="message" class="contact-form__textarea" placeholder="Your message" required></textarea>
+    </div>
+    <div class="contact-form__checkbox-field">
+      <input type="checkbox" id="send_copy" name="send_copy" class="contact-form__checkbox">
+      <label for="send_copy" class="contact-form__checkbox-label">Send me a copy</label>
+    </div>
+    <div class="contact-form__buttons">
+      <button type="submit" class="contact-form__button">
+        <span class="contact-form__button-text">Send Message</span>
+      </button>
+    </div>
+    <div class="contact-form__message" data-contact-form-target="message"></div>
+  <% end %>
+</dialog>
