Disable email form temporarily
Spam issue, need captcha

--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -4,8 +4,13 @@
     <div class="contact-form__heading">
       <h2>Contact</h2>
     </div>
-    <div class="contact-form__subheading">
-      <p>Feel free to drop a line below with any feedback, suggestions or questions!</p>
+      <div class="contact-form__subheading">
+        <div class="contact-form__subheading">
+      <p>
+        <strong>The contact form is temporarily disabled</strong><br>
+        <small>Fixing a spam issue — it will be back soon!</small>
+      </p>
+    </div>
     </div>
     <div class="contact-form__field">
       <label for="email" class="contact-form__label">Email</label>
@@ -20,9 +25,9 @@
       <label for="send_copy" class="contact-form__checkbox-label">Send me a copy</label>
     </div>
     <div class="contact-form__buttons">
-      <button type="submit" class="contact-form__button">
+      <%# <button type="submit" class="contact-form__button">
         <span class="contact-form__button-text">Send Message</span>
-      </button>
+      </button> %>
     </div>
     <div class="contact-form__message" data-contact-form-target="message"></div>
   <% end %>
